# i2e_project

./: .gitignore  README.md  pyproject.toml
app/generation/: llm_client.py
app/ingestion/: box_extractor.py  chunker.py  image_extractor.py  pdf_parser.py  structure_extractor.py  table_extractor.py
app/knowledge_base/: acronym_store.py  bm25_index.py  embedder.py  vector_store.py
app/retrieval/: context_assembler.py  hybrid_retriever.py
app/ui/: streamlit_app.py
scripts/: add_boxes.py  add_figures.py  add_tables.py  ingest.py
